--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   </head>
 
   <body>
-    <h1>dgdgdgd</h1>
-    <h1>dgdgdgd</h1>
-    <h1>dgdgdgd</h1>
-    <h1>dgdgdgd</h1>
+    <h1>okan</h1>
+    <h1>özdemir</h1>
+    <h1>samsun</h1>
+    <h1>test</h1>
+    <div>deneme</div>
   </body>
 </html>
