--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>okan</h1>
     <h1>özdemir</h1>
     <h1>samsun</h1>
-    <h1>test</h1>
+    <h1>test1</h1>
     <div>deneme</div>
   </body>
 </html>
